kubernetes/apps/bookboss/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app bookboss
  labels:
    app.kubernetes.io/name: *app
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      # no arm64 support
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: ghcr.io/szinn/bookboss:v0.8.38@sha256:e2c42e38f097e13f18fa6a857d6ec87aef581c39fb6d2c5992291e1601013c12
          name: bookboss
          ports:
            - containerPort: &port 8080
              name: http
          livenessProbe: &probes
            httpGet:
              path: /
              port: *port
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe: *probes
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          volumeMounts:
            - name: ingest
              mountPath: /ingest
            - name: *app
              mountPath: /data
            - name: scratch
              mountPath: /tmp
      volumes:
        - name: *app
          persistentVolumeClaim:
            claimName: *app
        - name: ingest
          emptyDir: {}
        - name: scratch
          emptyDir: {}
